--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -1,14 +1,17 @@
 .PageHeader {
-  background-color: var(--darkGrey);
+  /* background-color: var(--darkGrey); */
   color: white;
   padding: 25rem 0;
   width:100%
 }
 
 .PageHeader .BackgroundImage {
-  
+  background-size: contain!important;
 }
-
+.PageHeader .BackgroundImage .BackgroundImage{
+  transform: scale(1.05);
+  background-size: contain!important;
+}
 .PageHeader-large {
   padding: 20rem 0;
 }
