--- a/src/templates/HomePage.css
+++ b/src/templates/HomePage.css
@@ -20,7 +20,9 @@
 .home-artists-links a:nth-child(7n+6){
   color: #12b258;
 }
-
+.home-artists-links a:hover{
+  text-decoration: underline;
+}
 .home-artists-links p {
   font-family: 'dinBoldFont', sans-serif;
   font-size: 2.6rem;
@@ -33,10 +35,10 @@ a:hover {
   color: #f8ec21;
 }
 
-.home-artists-links a:hover {
+/* .home-artists-links a:hover {
   border-bottom-color: transparent;
   color: #ef4137;
-}
+} */
 
 .fixcenter {
   margin: auto;
