--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -174,6 +174,9 @@
   .Nav--Container {
     display: flex;
   }
+  .dropmenu>ul{
+    display: none;
+  }
 
   .Nav--MenuButton {
     display: block !important;
@@ -250,6 +253,11 @@
   .Nav--GroupLinks .NavLink {
     font-size: 1.5rem;
     width: auto;
+  }
+}
+@media (max-width: 320px) {
+  .Nav .Logo {
+    width: 75px!important;
   }
 }
 
