--- a/src/templates/ArtistPost.css
+++ b/src/templates/ArtistPost.css
@@ -3,7 +3,14 @@
 .Blog {
   margin-top:70px;
 }
-
+button.booking{
+  position: absolute;
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  z-index: -100;
+  left: -100px;
+}
 
 h1.artistTitle {
   margin-top: 20px;
